Fixes sign in/up button alignment

--- a/shared/ui/styles/main.less
+++ b/shared/ui/styles/main.less
@@ -507,6 +507,7 @@ body.preload * {
 	border-radius: 0;
 	border: 1px solid transparent !important;
 	outline: none !important;
+	align-items: center;
 
 	&:hover {
 		background: var(--button-background-color-hover);
